# waybar-niri-workspaces-enhanced

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rename-workspace.sh  style.css  todo.md  treefmt.toml  waybar-config.jsonc
.github/workflows/: nix.yml
home-manager-example/: flake.nix
src/: default_icons.rs  lib.rs
