[package]
name = "waybar-niri-workspaces-enhanced"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
async-channel = "2.3"
env_logger = "0.11.8"
log = "0.4.28"
niri-ipc = "25.8.0"
serde = "1.0.228"
signal-hook = "0.3"
waybar-cffi = { git = "https://github.com/justbuchanan/waybar-cffi-rs", rev = "0cfa5fc5eaaf695effb53e34b8976d00531a6dfe" }
